--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,23 @@
+# Base
+NODE_ENV=development
+DEBUG=false
+
+# Email and Password
+ADMIN_EMAIL="any valid email here"
+ADMIN_PASSWORD="min8"
+
 # Better Auth
-BETTER_AUTH_SECRET=
-BETTER_AUTH_URL=
+BETTER_AUTH_SECRET="generate here https://generatekeys.grngroup.net/"
+BETTER_AUTH_URL=http://localhost:3000
 
 # Database
-DATABASE_URL=
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/doblog
+DRIZZLE_LOGGER=false
 
-# Github
+# Github (Optional)
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
-# Google
+# Google (Optional)
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-
-# Discord
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
