--- a/package.json
+++ b/package.json
@@ -1,48 +1,76 @@
 {
-  "name": "titan",
-  "version": "0.1.0",
+  "name": "doblog",
+  "version": "0.0.1",
+  "description": "The easiest way for you to implement a blog in your company.",
+  "author": {
+    "name": "GRN Group",
+    "email": "greens.group.2015@gmail.com"
+  },
+  "maintainers": [
+    {
+      "name": "Alpha Vylly (AlphaLawless)",
+      "email": "alpha.vylly12@gmail.com"
+    },
+    {
+      "name": "Matheus Agostinho (TheMath123)",
+      "email": "contact@matheuspa.com"
+    },
+    {
+      "name": "Kaik Selhorst (Bseven)",
+      "email": "oficial.kaikselhorst@gmail.com"
+    }
+  ],
   "private": true,
   "scripts": {
+    "checktype": "tsc --noEmit",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "lint": "biome check",
+    "lint:fix": "biome check --write ./**/*",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "bun run src/lib/db/migrate.ts",
+    "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "lint": "next lint"
+    "db:check": "drizzle-kit check",
+    "db:seed": "bun run ./src/infra/db/seed.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "@neondatabase/serverless": "^1.0.0",
-    "@radix-ui/react-avatar": "^1.1.9",
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@t3-oss/env-nextjs": "^0.13.4",
-    "better-auth": "^1.2.7",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.43.1",
-    "lucide-react": "^0.503.0",
+    "@hookform/resolvers": "5.0.1",
+    "@neondatabase/serverless": "1.0.0",
+    "@node-rs/argon2": "2.0.2",
+    "@radix-ui/react-avatar": "1.1.9",
+    "@radix-ui/react-dropdown-menu": "2.1.14",
+    "@radix-ui/react-label": "2.1.6",
+    "@radix-ui/react-popover": "1.1.13",
+    "@radix-ui/react-slot": "1.2.2",
+    "@t3-oss/env-nextjs": "0.13.4",
+    "better-auth": "1.2.7",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "dotenv": "16.5.0",
+    "drizzle-orm": "0.43.1",
+    "lucide-react": "0.503.0",
     "next": "15.4.0-canary.34",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.3",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0",
-    "zod": "^3.24.4"
+    "next-themes": "0.4.6",
+    "pino": "9.7.0",
+    "pino-pretty": "13.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "7.56.3",
+    "sonner": "2.0.3",
+    "tailwind-merge": "3.3.0",
+    "zod": "3.24.4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.6",
-    "@types/node": "^20.17.47",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
-    "drizzle-kit": "^0.31.1",
-    "tailwindcss": "^4.1.6",
-    "tw-animate-css": "^1.2.9",
-    "typescript": "^5.8.3"
+    "@biomejs/biome": "1.9.4",
+    "@tailwindcss/postcss": "4.1.6",
+    "@types/node": "20.17.47",
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5",
+    "drizzle-kit": "0.31.1",
+    "tailwindcss": "4.1.6",
+    "tw-animate-css": "1.2.9",
+    "typescript": "5.8.3"
   }
 }
