--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lucide-react": "0.503.0",
     "next": "15.4.0-canary.34",
     "next-themes": "0.4.6",
+    "pg": "8.16.0",
     "pino": "9.7.0",
     "pino-pretty": "13.0.0",
     "react": "19.1.0",
@@ -66,6 +67,7 @@
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/postcss": "4.1.6",
     "@types/node": "20.17.47",
+    "@types/pg": "8.15.2",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
     "drizzle-kit": "0.31.1",
