feat: add @types/bun to devDependencies and update db:migrate script path

--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "test": "NODE_TLS_REJECT_UNAUTHORIZED=0 bun test",
     "lint": "biome check",
     "lint:fix": "biome check --write ./**/*",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "bun run src/lib/db/migrate.ts",
+    "db:migrate": "bun run ./src/infra/db/migrate.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:check": "drizzle-kit check",
@@ -65,6 +66,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/postcss": "4.1.6",
+    "@types/bun": "1.2.13",
     "@types/node": "20.17.47",
     "@types/pg": "8.15.2",
     "@types/react": "19.1.4",
