fix: migrate and e2e test and more...
- feat: update PostgreSQL port mapping in docker-compose.yml
- refactor: remove old migration files for spooky_glorian and mushy_spectrum
- feat: create new migration file for far_sleepwalker with updated schema
- fix: update user_id type to uuid in account and session schemas
- chore: add husky pre-commit hook for linting and type checking
- fix: modify error logging in category route to prevent console errors
- chore: update seed script to ensure process exits correctly after seeding
- feat: add constants helper for server URL in e2e tests

--- a/biome.json
+++ b/biome.json
@@ -8,6 +8,14 @@
     "enabled": true,
     "useIgnoreFile": true
   },
+  "overrides": [
+    {
+      "ignore": ["node_modules", "dist"]
+    }
+  ],
+  "files": {
+    "ignore": []
+  },
   "linter": {
     "enabled": true,
     "rules": {
