refactor: database schema to use 'text' type for IDs and create new migration files

--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,7 @@
     }
   ],
   "files": {
-    "ignore": [".vscode/*"]
+    "ignore": [".vscode/*", "drizzle/migrations/*"]
   },
   "linter": {
     "enabled": true,
