feat: add new libs

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "biome check",
     "lint:fix": "biome check --write ./**/*",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "bun run src/lib/db/migrate.ts",
+    "db:migrate": "bun run src/infra/db/migrate.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:check": "drizzle-kit check",
@@ -39,12 +39,14 @@
     "@hookform/resolvers": "5.0.1",
     "@neondatabase/serverless": "1.0.0",
     "@node-rs/argon2": "2.0.2",
+    "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-avatar": "1.1.9",
     "@radix-ui/react-dropdown-menu": "2.1.14",
     "@radix-ui/react-label": "2.1.6",
     "@radix-ui/react-popover": "1.1.13",
     "@radix-ui/react-slot": "1.2.2",
     "@t3-oss/env-nextjs": "0.13.4",
+    "@types/react-syntax-highlighter": "15.5.13",
     "better-auth": "1.2.7",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -58,6 +60,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.56.3",
+    "react-markdown": "10.1.0",
+    "react-syntax-highlighter": "15.6.1",
     "sonner": "2.0.3",
     "tailwind-merge": "3.3.0",
     "zod": "3.24.4"
