--- a/package.json
+++ b/package.json
@@ -45,10 +45,15 @@
     "@node-rs/argon2": "2.0.2",
     "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-avatar": "1.1.9",
+    "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-dropdown-menu": "2.1.14",
     "@radix-ui/react-label": "2.1.6",
     "@radix-ui/react-popover": "1.1.13",
-    "@radix-ui/react-slot": "1.2.2",
+    "@radix-ui/react-select": "2.2.5",
+    "@radix-ui/react-separator": "1.1.7",
+    "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-tabs": "1.1.12",
+    "@radix-ui/react-tooltip": "1.2.7",
     "@t3-oss/env-nextjs": "0.13.4",
     "@types/react-syntax-highlighter": "15.5.13",
     "better-auth": "1.2.7",
@@ -56,7 +61,7 @@
     "clsx": "2.1.1",
     "dotenv": "16.5.0",
     "drizzle-orm": "0.43.1",
-    "lucide-react": "0.503.0",
+    "lucide-react": "0.511.0",
     "next": "15.4.0-canary.34",
     "next-themes": "0.4.6",
     "pg": "8.16.0",
