refactor: update validation schemas for categories and subcategories
- Removed old category validation schema and replaced it with create and update schemas.
- Updated subcategory validation schemas to follow the same structure.
- Refactored service files to use new validation schemas.
- Changed error handling to utilize logger instead of console.error.
- Updated package dependencies for lucide-react and zod.
- Adjusted pre-commit hooks to remove linting step.
- Added custom spell check words in VSCode settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,8 @@
   },
   "editor.formatOnSave": true,
   "eslint.enable": false,
-  "npm.packageManager": "bun"
+  "npm.packageManager": "bun",
+  "cSpell.words": [
+    "stringbool"
+  ]
 }
