--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:check": "drizzle-kit check",
-    "db:seed": "bun run ./src/infra/db/seed.ts",
+    "db:seed": "bun run ./src/infra/db/seed/seed.ts",
     "dockerup": "docker compose up -d",
     "dockerdown": "docker compose down",
     "prepare": "husky"
