feat: implement Dicebear avatar generation and update related services

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,10 @@
   "eslint.enable": false,
   "npm.packageManager": "bun",
   "cSpell.words": [
+    "dicebear",
+    "Dicebear",
+    "lorelei",
+    "notionists",
     "stringbool"
   ]
 }
