feat: add Redis service to docker-compose and configure Redis integration
feat: update package.json with new dependencies for email handling and Redis

feat: add example Redis configuration file

feat: implement forgot password service with email verification

feat: enhance environment configuration to include Redis and SMTP settings

feat: create Redis client for database interactions

feat: implement email verification and reset password email templates

feat: add email queue client for handling email jobs

feat: implement email sender using Nodemailer

feat: create email worker to process email jobs from the queue

fix: update BetterAuth configuration to include email verification and reset password functionality

feat: add validation schema for forgot password requests

--- a/.env.example
+++ b/.env.example
@@ -4,16 +4,18 @@ DEBUG=false
 
 # Better Auth
 BETTER_AUTH_SECRET="generate here https://generatekeys.grngroup.net/"
-BETTER_AUTH_URL=http://localhost:3000
+BETTER_AUTH_URL="http://localhost:3000"
 
 # Database
-DATABASE_URL=postgres://postgres:postgres@localhost:5433/doblog
+DATABASE_URL="postgres://postgres:postgres@localhost:5433/doblog"
 DRIZZLE_LOGGER=false
 
-# Github (Optional)
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+# Redis
+REDIS_URL=""
 
-# Google (Optional)
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+# SMTP - Email
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=
