--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test:e2e": "NODE_TLS_REJECT_UNAUTHORIZED=0 bun test --test-name-pattern e2e",
     "lint": "biome check",
     "lint:fix": "biome check --write ./src",
+    "email:dev": "email dev",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "bun run ./src/infra/db/migrate.ts",
     "db:push": "drizzle-kit push",
@@ -55,6 +56,7 @@
     "@radix-ui/react-tabs": "1.1.12",
     "@radix-ui/react-tooltip": "1.2.7",
     "@react-email/components": "0.1.1",
+    "@react-email/render": "1.1.3",
     "@react-email/tailwind": "1.0.5",
     "@t3-oss/env-nextjs": "0.13.4",
     "@types/react-syntax-highlighter": "15.5.13",
