--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "bullmq": "5.56.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "dotenv": "16.5.0",
     "drizzle-orm": "0.44.2",
