feat: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,10 @@ SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
 SMTP_FROM=
+
+S3_PORT='9000'
+S3_ENDPOINT='localhost'
+S3_ACCESS_KEY='minioadmin'
+S3_SECRET_KEY='minioadmin'
+S3_BUCKETNAME='my-test-bucket'
+S3_USESSL='false'
