--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "drizzle-orm": "0.44.2",
     "ioredis": "5.6.1",
     "lucide-react": "0.523.0",
+    "minio": "8.0.5",
     "next": "15.4.0-canary.34",
     "next-themes": "0.4.6",
     "nodemailer": "7.0.3",
