--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "5.1.1",
+    "@lexical/react": "0.33.0",
     "@node-rs/argon2": "2.0.2",
     "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-avatar": "1.1.9",
@@ -71,6 +72,7 @@
     "dotenv": "16.5.0",
     "drizzle-orm": "0.44.2",
     "ioredis": "5.6.1",
+    "lexical": "0.33.0",
     "lucide-react": "0.523.0",
     "minio": "8.0.5",
     "next": "15.4.0-canary.34",
